# mf_knowledebase

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
db/: Dockerfile  docker-compose.yml
db/init/: init.sql
src/: main.py  main_api.py  ui.py
src/analysis/: cobol_parser.py  summarizer.py
src/cli/: chat.py  run_pipeline.py
src/core/: config.py  logger.py  models.py
src/database/: vector_utils.py
src/pipeline/: data_loader.py  db_setup.py  generate_stories.py  ingest.py  process.py
src/rag/: chat_engine.py
src/reports/: export.py
